youfull/objects/My_Downline_Field__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Lead_Contact_Type__c</fullName>
        <label>Lead Contact Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Metrics_Field_Label__c</fullName>
        <label>Lead Metrics Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Metrics_Field__c</fullName>
        <label>Lead Metrics Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_SubSts__c</fullName>
        <label>Lead SubSts</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>My Downline Field</label>
</CustomObject>